# LIP_SSL

./: CMakeLists.txt  create_colormap.py  package.xml  part.txt  test_segmentation.py
human/config/attention/: deploy.prototxt
launch/: run_human_parsing_remote_machine.launch  run_human_parsing_remote_machine_42.launch
scripts/: padding.py  segmentation_client.py  segmentation_server.py  segmentation_server_class.py  test_segmentation.py  utils.py
srv/: HumanParsing.srv
