<?xml version="1.0"?>
<package>
  <name>human_parsing</name>
  <version>0.0.0</version>
  <description>The human_parsing package</description>

  <maintainer email="bm@jsk.imi.i.u-tokyo.ac.jp">bm</maintainer>
  <license>PRIVATE</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  

  <export>
  </export>
</package>
